--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,15 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-color: hsl(268, 21%, 30%);
 }
-
+.App {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+h1 {
+  color: black;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
