--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  
-
-  }
+}
 
 a {
   font-weight: 500;
@@ -21,18 +19,21 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: hsl(268, 21%, 30%);
+  /* background-color: hsl(268, 21%, 30%); */
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  color: white;
+  color: black;
 }
 p {
-  color: white;
+  color: black;
+  margin: 0;
 }
-
+li {
+  list-style: none;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -43,6 +44,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  background-color: #f9f9f9;
 }
 button:hover {
   border-color: #646cff;
@@ -59,8 +61,5 @@ button:focus-visible {
   }
   a:hover {
     color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
