--- a/src/index.css
+++ b/src/index.css
@@ -19,13 +19,14 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  /* background-color: hsl(268, 21%, 30%); */
+  background: #f5e9d9;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
   color: black;
+  margin-bottom: 10px;
 }
 p {
   color: black;
